--- a/package.json
+++ b/package.json
@@ -8,29 +8,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^5.9.2",
-    "@react-navigation/native": "^5.7.6",
-    "expo": "~39.0.2",
-    "expo-status-bar": "~1.0.2",
+    "@react-navigation/bottom-tabs": "^5.11.9",
+    "@react-navigation/native": "^5.9.4",
+    "expo": "^39.0.5",
+    "expo-status-bar": "^1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-screens": "^2.11.0",
+    "react-native-screens": "^2.18.1",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.2"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
-    "@types/react-native": "^0.63.25",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.12",
+    "@types/react-native": "^0.63.52",
     "@types/react-native-vector-icons": "^6.4.6",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
-    "eslint": "^7.11.0",
-    "eslint-plugin-react": "^7.21.4",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
+    "eslint": "^7.23.0",
+    "eslint-plugin-react": "^7.23.2",
     "react-native-web": "~0.13.7",
-    "typescript": "~3.9.5"
+    "typescript": "^3.9.9"
   },
   "private": true
 }
