--- a/package.json
+++ b/package.json
@@ -10,27 +10,28 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^5.9.4",
-    "expo": "^39.0.5",
-    "expo-status-bar": "^1.0.3",
+    "axios": "^0.21.1",
+    "expo": "^40.0.0",
+    "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-screens": "^2.18.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-screens": "~2.15.2",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.15.6",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.12",
-    "@types/react-native": "^0.63.52",
+    "@types/react": "~16.9.35",
+    "@types/react-dom": "~16.9.8",
+    "@types/react-native": "~0.63.2",
     "@types/react-native-vector-icons": "^6.4.6",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "eslint": "^7.23.0",
     "eslint-plugin-react": "^7.23.2",
     "react-native-web": "~0.13.7",
-    "typescript": "^3.9.9"
+    "typescript": "~4.0.0"
   },
   "private": true
 }
